Fixes "Current Weather" data display alignment

--- a/src/app/weather-display/weather-display.component.css
+++ b/src/app/weather-display/weather-display.component.css
@@ -6,42 +6,62 @@
   width: 100%;
   grid-template-areas: "now today" "now tomorrow";
   grid-gap: 1rem;
+  margin-bottom: 3rem;
 }
 .now {
   background-color: var(--md-sys-color-primary-container);
   grid-area: now;
   color: white;
 }
-
-
-.bigSymbol{
-  font-size: 3rem;
+.now >mat-card-content>h1{
+  width: 80%;
+  size: 4vw;
+}
+.bigSymbol {
+  font-size: 3.5rem;
   position: absolute;
   top: 1rem;
   right: 1rem;
 }
 .w-d-main {
+  margin-top: 1rem;
   width: 100%;
 }
-.loading{
-  color: var(--md-sys-color-on-background);
-}
-.shortData{
+
+.shortData {
   display: flex;
-  flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
-  padding: 0.5rem;
+  padding: 0.5rem 1vw 0.5rem 1vw;
+  margin-top: 1rem;
 }
-.loadingCard{
+.shortData > div {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 0.5rem;
+}
+.loadingCard {
+  margin-top: 1rem;
+}
+.loadingCard > mat-card-content  {
   display: flex;
   gap: 2rem;
   grid-template-columns: 1fr min-content;
 }
+.loadingCard > mat-card-content> h2 {
+  color: var(--md-sys-color-on-background);
+}
+.stationFooter {
+  display: flex;
+  margin-top: auto;
+  margin-bottom: 1rem;
+  margin-left: 1rem;
+}
 @media screen and (max-width: 1000px) {
   .grid {
     grid-template-columns: 1fr;
-    grid-template-rows: 1fr 1fr 1fr;
+    grid-template-rows: min-content 1fr 1fr;
     grid-template-areas: "now" "today" "tomorrow";
   }
   .grid-item {
@@ -49,5 +69,5 @@
   }
   .loadingCard > h2 {
     display: none;
-  } 
+  }
 }
